add tests, add babel polyfill

--- a/src/Components/HCardContainer/Preview/Preview.css
+++ b/src/Components/HCardContainer/Preview/Preview.css
@@ -22,7 +22,7 @@
   font-family: 'Times New Roman', Times, serif;
 }
 
-.box-2 h3 {
+.previewContainer h3 {
   text-align: right;
   margin-right: 0px;
   margin-bottom: 2px;
