--- a/src/Components/HCardContainer/HCardContainer.css
+++ b/src/Components/HCardContainer/HCardContainer.css
@@ -1,15 +1,15 @@
 @media(min-width: 1185px) {
-  .container-1 {
+  .hCardContainer {
     display: flex;
     flex-wrap: wrap;
   }
 
-  .box-2 {
+  .previewContainer {
     padding: 10px;
   }
 }
 
-.container-1 {
+.hCardContainer {
   background-color: white;
   border: solid 1px;
   margin: 2% 8%;
@@ -19,13 +19,13 @@
   padding: 20px;
 }
 
-.box-1 {
+.formContainer {
   flex: 6;
   border: 1px #ccc solid;
   padding: 10px;
 }
 
-.box-2 {
+.previewContainer {
   background-color: #E7E9EC;
   flex: 6;
   border: 1px #ccc solid;
@@ -33,7 +33,7 @@
 }
 
 @media (max-width: 1450px) {
-  .container-1 {
+  .hCardContainer {
     padding:0;
     margin:0;
   }
@@ -50,13 +50,13 @@
 }
 
 @media (max-width: 1185px) {
-  .box-2 {
+  .previewContainer {
     padding: 1% 10% 5%;
   }
 }
 
 @media (max-width: 720px) {
-  .box-2 {
+  .previewContainer {
     padding: 0;
     margin: 0 0 60px;
   }
