--- a/src/Components/HCardContainer/Preview/Avatar/Avatar.css
+++ b/src/Components/HCardContainer/Preview/Avatar/Avatar.css
@@ -7,11 +7,14 @@
   box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.75);
   height: 150px;
   width: 120px;
+  position: relative;
 }
 
 .container img {
-  width: 100%;
-  height: auto;
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%)
 }
 
 .container i {
